--- a/src/main/resources/static/views/setting.html
+++ b/src/main/resources/static/views/setting.html
@@ -86,8 +86,8 @@
 				placeholder="Like KafkaAlerting@chickling.com or something">
 		</div>
 		<div class="form-group">
-			<label for="inputMailSender">Mail subject</label> <input type="text"
-				class="form-control" id="inputMailSender"
+			<label for="inputMailSubject">Mail subject</label> <input type="text"
+				class="form-control" id=""inputMailSubject""
 				ng-model="settingForm.mailSubject"
 				placeholder="Something like (Alerting)Kafka monitor alerting! ">
 		</div>
