--- a/src/main/resources/static/views/includes/group.inc.html
+++ b/src/main/resources/static/views/includes/group.inc.html
@@ -10,6 +10,7 @@
       <th>Owner</th>
       <th>Created</th>
       <th>Last Seen</th>
+      <th>Running Status</th>
     </tr>
   </thead>
   <tbody ng-repeat="c in info.offsets">
@@ -23,6 +24,7 @@
       <td></td>
       <td></td>
       <td></td>
+      <td></td>
     </tr>
     <tr  class="topic-row" ng-show="groupBy == 'topic'">
       <td><a href="#/group/{{c.group}}/{{c.topic}}">{{c.group}}</a></td>
@@ -30,6 +32,7 @@
       <td>{{c.offset}}</td>
       <td>{{c.logSize}}</td>
       <td>{{c.logSize - c.offset}}</td>
+      <td></td>
       <td></td>
       <td></td>
       <td></td>
@@ -48,6 +51,11 @@
       <td ng-switch="p.modified">
       	<span ng-switch-when="-1">-</span>
       	<span ng-switch-default><moment timestamp="{{p.modified}}"></moment></span>
+      </td>
+      <td ng-switch="p.owner">
+        <div ng-switch-when="NA" class="statuscircle bg-red"></div>
+      	<div ng-switch-when="-" class="statuscircle bg-red"></div>
+      	<div ng-switch-default class="statuscircle bg-green"></div>
       </td>
     </tr>
   </tbody>
